--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "aos": "^2.3.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.0",
     "react-icons": "^4.7.1",
+    "react-modal": "^3.16.1",
     "react-scripts": "5.0.1",
     "swiper": "^8.4.5",
     "toaster": "^0.1.2",
